# homework

./: README.md  pyproject.toml  registry.json
examples/: README.md
examples/coding-homework/coding-homework-assistant/: SKILL.md
examples/coding-homework/coding-homework-assistant/references/: ir.md
examples/coding-homework/ds-algorithm-lab/references/: ir.md
examples/coding-homework/java-oop-lab/: SKILL.md
examples/coding-homework/java-oop-lab/references/: ir.md  source.md
examples/coding-homework/ml-notebook-lab/: SKILL.md
examples/coding-homework/python-lab/: SKILL.md
examples/simulation-lab/keil-embedded-lab/references/: ir.md
examples/simulation-lab/matlab-simulink-lab/references/: ir.md
examples/simulation-lab/matlab-simulink-lab/scripts/: check_multisim.py
examples/simulation-lab/multisim-lab/: SKILL.md
examples/simulation-lab/multisim-lab/references/: ir.md  source.md
examples/simulation-lab/multisim-lab/scripts/: check_keil.py
examples/simulation-lab/simulation-homework-assistant/references/: source.md
examples/simulation-lab/simulation-homework-assistant/scripts/: check_matlab.py
examples/student-homework/homework-assistant/: SKILL.md
examples/student-homework/homework-assistant/references/: ir.md
skill-forge/built/coding-homework/ds-algorithm-lab/: SKILL.md
skill-forge/built/simulation-lab/keil-embedded-lab/: SKILL.md
skill-forge/themes/coding-homework/: THEME.md  coding-homework-assistant.skill.md
skill-forge/themes/simulation-lab/: THEME.md
skill-forge/themes/student-homework/: THEME.md  quartus-lab.skill.md
(+73 files in other folders)
