[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "stem-homework-skills"
version = "3.0.0"
description = "Agent Skills for STEM student homework routing and lab workflows"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["pyyaml>=6.0"]
keywords = ["agent-skills", "cursor", "homework", "quartus", "matlab", "stem"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/azhimiao/homework"
Repository = "https://github.com/azhimiao/homework"

[project.scripts]
skill = "skill_core_cli:main"

[tool.setuptools]
py-modules = ["skill_core_cli"]
